# pocketsocket-2

./: .gitignore  compile_lib.bat  compile_nimsock_exe_debug.bat  pocketsocket.nimble  pyproject.toml  readme.md
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml
examples/python/: nimsock.py
nim_src/: compile_nimsock_exe.bat  compile_nimsock_pyd.bat  help.txt  nimsock.nimble  nimsock_example.py  pocketsocket.nimble
nim_src/src/: pocketsocket.nim  pocketsocket_cli.nim
nim_src/src/pocketsocketpkg/: broadcast.nim  chat.nim  hook.nim  pocketsocket_server.nim  service.nim  service_orig.nim  submodule.nim  websocket_dispatch.nim
nim_src/src/templates/: index.html
nim_src/templates/: index.html
nim_src/tests/: test1.nim
py_src/: pyproject.toml  readme.md
py_src/src/pocketsocket/: wrapper.py
python/: hatch_build.py
python/pocketsocket/: boot.py
src/: nim.cfg
src/pocketsocketpkg/: hook.nim  imp.nim  ingress.nim  pocketsocket_server.nim.cfg  service.nim
