[project]
name = "pocketsocket"
version = "2.0.3"
description = "Zero config websockets"
readme = "readme.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
    { name="Strangemother", email="pocketsocket@strangemother.com" }
]

classifiers = [
  "Programming Language :: Python",
]

dependencies = []

[project.urls]
Documentation = "https://github.com/Strangemother/pocketsocket-2#readme"
Homepage = "https://github.com/Strangemother/pocketsocket-2"
Repository = "https://github.com/Strangemother/pocketsocket-2"
Issues = "https://github.com/Strangemother/pocketsocket-2/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
