[project]
name = "pocketsocket"
version = "2.0.3"
description = "Zero config websockets"
readme = "readme.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
    { name="Strangemother", email="pocketsocket@strangemother.com" }
]

classifiers = [
  "Programming Language :: Python",
]

dependencies = []

[project.urls]
Documentation = "https://github.com/Strangemother/pocketsocket-2#readme"
Homepage = "https://github.com/Strangemother/pocketsocket-2"
Repository = "https://github.com/Strangemother/pocketsocket-2"
Issues = "https://github.com/Strangemother/pocketsocket-2/issues"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pocketsocket/"]

[tool.hatch.build]
# include = [
#     "*.pyd",
#     "pocketsocket/*.pyd",
#     "src/pocketsocket/*.pyd"
# ]
artifacts = ["*.so", "*.dll", "*.dylib", "src/pocketsocket/*.pyd"]


# [tool.hatch.build.targets.wheel.force-include]
# "src/pocketsocket/crc.pyd" = "pocketsocket/crc.pyd"